Resolve QA Final Acceptance Gate findings (14): observability, config/secrets, error contract, batch N+1, docs, OWASP
Addresses all 14 open findings from the QA Final Acceptance Gate report against the
COBOL->Java 25 / Spring Boot 3.5 CardDemo migration. Each fix is statically validated
(mvn clean verify: 1,336 tests green, Gate 2 zero compiler warnings, JaCoCo line 95.06%)
and runtime re-verified against the running app + LocalStack/PostgreSQL stack.

Observability & logging
- Issue 1 (MAJOR): logback-spring.xml now emits structured JSON with the correlationId MDC
  field on the local profile (previously only non-local), so local runs are observable.
- Issue 2 (MAJOR): CardDemoApplication excludes UserDetailsServiceAutoConfiguration so no
  generated security password is ever logged.
- Issue 3 (MINOR): MetricsConfig adds a MeterFilter that removes the Spring Batch Prometheus
  tag-key mismatch warning.

Configuration & secrets
- Issue 4 (MAJOR): removed the hardcoded JWT fallback from application-local.yml; the secret
  is now `${JWT_SECRET}` with no default in every profile (fail-fast when unset). Added
  .env.example and onboarding guidance.
- Issue 5 (MINOR): docker-compose.yml credentials externalized via ${VAR:-default}; test-profile
  JWT injected through the Surefire/Failsafe plugin environment instead of a committed value.
- Issue 6 (INFO): added a profile-aware fail-fast EnvironmentPostProcessor + FailureAnalyzer
  (registered via META-INF/spring.factories) that aborts prod startup with a single
  human-readable report of all missing required DB/AWS/JWT configuration.

API error contract
- Issue 10 (MINOR): container-level (Tomcat) errors for malformed/encoded request paths now
  return the JSON ErrorResponse contract instead of Tomcat HTML. Added JsonErrorReportValve,
  ContainerErrors, JsonErrorController; wired via WebConfig + SecurityConfig ERROR-dispatcher rule.

Performance
- Issue 8 (MINOR): eliminated the per-row N+1 lookup in the transaction print